controlador y vistas de alumnos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "sqlserver": "server=.\\SQLEXPRESS, database=InscripcionesContext, user id=sa, password=123, multipleactiveresultsets=true, Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
