--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "sqlserver": "server=.\\SQLEXPRESS, database=InscripcionesContext, user id=sa, password=123, multipleactiveresultsets=true, Encrypt=false"
+    "sqlserver": "server=.\\SQLEXPRESS, database=InscripcionesContext, user id=sa, password=123, multipleactiveresultsets=true, Encrypt=false",
+    "mysql": "Server=127.0.0.1;Database=inscripcioncontext;User=root;Password=;",
+    "mysqlremoto": "Server=5.57.213.17;Database=smartsof_arayalauty;User=smartsof_araya;Password=arayalauty123;"
   },
   "Logging": {
     "LogLevel": {
